maybe final version this homework

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,94 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+
+* {
+  padding: 0;
+  margin: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .title {
+  margin-left: 120px;
+} */
+
+/* .contact-form {
+  margin-left: 20px;
+  text-align: center;
+  padding: 20px;
+  border: 2px solid cadetblue;
+  border-radius: 5px;
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+} */
+
+/* .contact-form input {
+  height: 20px;
+  padding-left: 10px;
+} */
+
+/* .contact-label {
+  display: flex;
+  flex-direction: column;
+} */
+/* 
+.contact-title {
+  margin-left: 150px;
+} */
+
+/* .contact-list {
+  padding: 20px;
+  margin-left: 20px;
+  border: 2px solid cadetblue;
+  border-radius: 5px;
+  width: 350px;
+} */
+
+/* .contact-item {
+  display: flex;
+  align-items: center;
+} */
+
+/* .contact-btn {
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: 3px;
+  height: 20px;
+  border-radius: 3px;
+  border-width: 1px;
+  border-color: darkgray;
+} */
+
+/* .contact-btn.contact-add {
+  height: 25px;
+} */
+
+/* .contact-icon {
+  color: cadetblue;
+  margin-right: 10px;
+} */
+
+/* .contact-name {
+  margin-right: auto;
+} */
+
+/* ul li:hover {
+  text-decoration: underline;
+  text-decoration-color: cadetblue;
+} */
+
+/* button:hover {
+  background-color: cadetblue;
+  border-width: 2px;
+  border-color: cadetblue;
+  border-radius: 3px;
+  cursor: pointer;
+} */
